--- a/index.html
+++ b/index.html
@@ -7,11 +7,26 @@
         <!-- <link rel="stylesheet" href="layout.css"> -->
         <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
         <script src="popup.js"></script>
+        <style>
+            #popUpWindow {
+                position: fixed;
+                width: 100px;
+                height: 150px;
+                left: 164px;
+                top: 65px;
+                background-color: gray;
+            }
+
+            #popUpWindow.hidden {
+                display: none;
+            }
+        </style>
     </head>
     <body>
         <canvas id="popUpStage" width=500 height=300>
             Your browser dose not support canvas!
         </canvas>
+        <div id="popUpWindow" class="hidden"></div>
     </body>
     <script>
         window.onload = function() {
