--- a/index.html
+++ b/index.html
@@ -45,9 +45,12 @@
             Your browser dose not support canvas!
         </canvas>
         <div id="popUpWindow" class="hidden">
-                    <button onclick="buttonClick();" style="float:right;">
-                        &#9746;
-                    </button>
+                <button onclick="closeWindow();" style="float:right;">
+                    &#9746;
+                </button>
+                <button onclick="clearStage();" style="float:bottom;">
+                    CLEAR
+                </button>
         </div>
     </body>
     <script>
